atualizando regra de trocas

--- a/WarProject/src/warproject/TelaDeJogo.form
+++ b/WarProject/src/warproject/TelaDeJogo.form
@@ -174,7 +174,7 @@
                                       <Component id="Continuar" min="-2" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
-                              <EmptySpace pref="87" max="32767" attributes="0"/>
+                              <EmptySpace max="32767" attributes="0"/>
                           </Group>
                       </Group>
                     </DimensionLayout>
@@ -195,7 +195,7 @@
                               </Group>
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="Continuar" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace pref="24" max="32767" attributes="0"/>
+                              <EmptySpace max="32767" attributes="0"/>
                           </Group>
                       </Group>
                     </DimensionLayout>
@@ -557,7 +557,7 @@
                               </Group>
                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
                               <Component id="btnPassarMovimentacao" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace pref="38" max="32767" attributes="0"/>
+                              <EmptySpace max="32767" attributes="0"/>
                           </Group>
                       </Group>
                     </DimensionLayout>
@@ -696,7 +696,7 @@
                                           <Component id="dadpDoisDefesaD" alignment="3" min="-2" max="-2" attributes="0"/>
                                           <Component id="dadoDoisAtaqueD" alignment="3" min="-2" max="-2" attributes="0"/>
                                       </Group>
-                                      <EmptySpace pref="44" max="32767" attributes="0"/>
+                                      <EmptySpace max="32767" attributes="0"/>
                                       <Group type="103" groupAlignment="3" attributes="0">
                                           <Component id="dadoTresDefesaD" alignment="3" min="-2" max="-2" attributes="0"/>
                                           <Component id="dadoTresAtaqueD" alignment="3" min="-2" max="-2" attributes="0"/>
