corrigido carta que nao funcionava no arquivo jar

--- a/WarProject/src/warproject/TelaDeCartas.form
+++ b/WarProject/src/warproject/TelaDeCartas.form
@@ -121,7 +121,7 @@
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/warproject/cartawar.png"/>
+              <Image iconType="3" name="/warproject/carta.png"/>
             </Property>
             <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
               <Dimension value="[175, 240]"/>
